app-aside Fix left nav white gap in ui-v2
After setting flex-shrink to 0 on app-aside, min-width is no longer
necessary.

--- a/resources/assets/css/inner/aside.less
+++ b/resources/assets/css/inner/aside.less
@@ -61,10 +61,6 @@
   .flex(0 0 auto);
 }
 
-.ui-v2 .app-aside {
-  min-width: @new_aside_menu_width;
-}
-
 .aside-left-nav,
 .aside-left-menu {
   .flexy(column);
